<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_date2"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/date_ar"
            android:textColor="#000"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#cfd8dc" />


        <TextView
            android:id="@+id/details_cost2"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/cost_ar"
            android:textColor="#000"
            android:textSize="18sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#cfd8dc" />

        <TextView
            android:id="@+id/details_details2"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/details_ar"
            android:textColor="#000"
            android:textSize="18sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#cfd8dc" />


        <ImageView
            android:id="@+id/details_status2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:src="@drawable/red_arrow" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#cfd8dc" />


        <TextView
            android:id="@+id/details_credit2"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/credit"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/row"
        android:layout_marginTop="2dp"
        android:background="#bdbdbd" />
</RelativeLayout>
