<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_customer_TV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:padding="5dp"
        android:text="@string/edit_cus"
        android:textColor="#fff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/c_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/customer_name_hint"
            android:inputType="text|textAutoCorrect|textAutoComplete"
            android:textColor="#000"
            android:textColorHint="#bcbcbc" />

        <EditText
            android:id="@+id/c_cost2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/cost_ar"
            android:inputType="number|numberDecimal"
            android:textColor="#000"
            android:textColorHint="#bcbcbc" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/c_details2"
            android:layout_width="2.0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/details_hint"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="#000"
            android:textColorHint="#bcbcbc" />


        <EditText
            android:id="@+id/c_date2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/data_hint"
            android:textColor="#000"
            android:textColorHint="#bcbcbc"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">


        <RelativeLayout
            android:id="@+id/c_out2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_raduis">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="لـــه"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/green_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/c_in2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_raduis">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="عليــه"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/red_arrow" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/c_save2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="حفظ"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />


        <TextView
            android:id="@+id/c_cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="الغاء"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>